fix: Problème d'overflow du titre sur les boites d'articles

--- a/insash_website_frontend/src/app/general-components/liste-document-tile/liste-document-tile.component.css
+++ b/insash_website_frontend/src/app/general-components/liste-document-tile/liste-document-tile.component.css
@@ -6,7 +6,6 @@ h2 {
   font-size: 16px;
   /* margin-bottom: 10px; */
   min-width: 60px;
-  width: max-content;
 }
 
 h3 {
